--- a/public/styles/Calendar.css
+++ b/public/styles/Calendar.css
@@ -97,16 +97,13 @@
   padding: 0.75em 0.5em;
   background: none;
 }
-.react-calendar__tile:disabled {
-  background-color: #ffffff1a;
-}
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background-color: black;
 }
-.react-calendar__tile--now {
+/* .react-calendar__tile--now {
   background: #777777;
-}
+} */
 /* .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
   background: #ffffa9;
@@ -119,13 +116,28 @@
   background: #a9d4ff;
 }
 .react-calendar__tile--active {
-  background: black;
-  color: white;
+  color: black !important;
+  background: white !important;
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: black;
+  color: black !important;
+  background: white !important;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #e6e6e6;
+}
+button.react-calendar__tile.react-calendar__month-view__days__day {
+  margin: 5px;
+  height: 65px;
+  flex-basis: 12.2857% !important;
+  max-width: 12.2857%!important;
+}
+button.react-calendar__tile.react-calendar__month-view__days__day:disabled {
+  /* margin: 5px;
+  height: 65px;
+  flex-basis: 12.2857% !important;
+  max-width: 12.2857%!important; */
+  border-color: #5D5D6D !important;
+  color: #5D5D6D !important;
 }
